added a loading gif and got made the fetch work a bit better

--- a/kahils-karaoke/src/App.css
+++ b/kahils-karaoke/src/App.css
@@ -1,10 +1,13 @@
+
+
 .App {
   text-align: center;
   /* background-image: url("./images/karaoke3.jpg"); */
   background-repeat: no-repeat;
   height: 500px; 
   width: 500px; 
-  font-family: 'Nothing You Could Do', cursive;
+  font-family: 'Orbitron', sans-serif;
+  background-color: black;
 }
 
 body {
@@ -66,7 +69,7 @@ body {
   padding: 30px 20px 0;
   width: 70%;
   border-bottom: 1px solid #cecece;
-  font-family: Roboto, sans-serif;
+  font-family: 'Orbitron', sans-serif;
   font-weight: 100;
   font-size: 15px;
   color: #333333;
