--- a/kahils-karaoke/src/App.css
+++ b/kahils-karaoke/src/App.css
@@ -4,8 +4,7 @@
   text-align: center;
   /* background-image: url("./images/karaoke3.jpg"); */
   background-repeat: no-repeat;
-  height: 1200px; 
-  /* width: 400px;  */
+  /* height: 1200px;  */
   font-family: 'Orbitron', sans-serif;
   background-color: black;
 }
@@ -15,6 +14,17 @@
   cursor: pointer;
 }
 
+
+.lyric-box {
+  display: grid;
+  border-style: solid;
+  border-color: red;
+  width: 100vw;
+  height: 100vh;
+  
+}
+
+
 .lyricss {
   color: rgb(0, 0, 0);
   font-family: sans-serif;
@@ -23,20 +33,28 @@
   width: 40%;
 
 
+
 }
 
+.video-link-container {
+    /* background-color: red; */
+    display: flex;
+    flex-direction: row-reverse;
+      width: 100%; 
+      height: 400px;
+
+  }
+
+
 .video-link {
-  display: grid;
-  grid-row: auto;
+  max-width: 100%;
+  max-height: 300px;
+  align-self: flex-end;
+  bottom: 30px;
 }
 
 .artist-style {
-  color: blue;
-}
-
-.lyric-box {
-  display: grid;
-  grid-row: auto;
+  color: rgb(107, 107, 251);
 }
 
 
