--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,21 @@
 
+html, body {
+  margin:0;
+height:100%;
+background-image: linear-gradient(to top, #494949 0%, rgb(0, 0, 0) 100%);
+}
+
 
 .App {
   text-align: center;
-  /* background-image: url("./images/karaoke3.jpg"); */
+  /* height: 100vh;
+  width: 100vw; */
+  background-image: url("./images/karaoke3.jpg");
   background-repeat: no-repeat;
-  height: 1000px; 
+  /* height: 1000px;  */
   font-family: 'Orbitron', sans-serif;
   /* background-color: black; */
-  background-image: linear-gradient(to top, #494949 0%, rgb(0, 0, 0) 100%);
+  /* border: solid green; */
 }
 
 .top-ten {
@@ -90,10 +98,6 @@
 }
 
 
-body {
-  margin: 0;
-}
-
 .links {
   color: white;
 }
@@ -140,60 +144,19 @@ margin: auto;
 
 }
 
-body {
-  background-color: rgb(199, 180, 95);
+.search-form-container {
+  display:flex;
 }
 
-.checkbox {
-  background-color: rgb(179, 179, 191);
-  /* font-size: 30px; */
+.search-form {
+  flex-direction: row;
+  position: center;
   margin: auto;
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 1px solid #958ce3;
-  box-shadow:
-  /* The top layer shadow */
-      0 1px 1px rgba(0,0,0,0.15),
-          /* The second layer */
-      0 10px 0 -5px rgb(107, 107, 251),
-          /* The second layer shadow */
-      0 10px 1px -4px rgba(0,0,0,0.15),
-          /* The third layer */
-      0 20px 0 -10px rgb(107, 107, 251),
-          /* The third layer shadow */
-      0 20px 1px -9px rgba(0,0,0,0.15);
-  padding: 30px;
 }
 
-.checkbox {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 30px 20px 0;
-  width: 70%;
-  border-bottom: 1px solid #92c280;
-  font-family: 'Orbitron', sans-serif;
-  font-weight: 100;
-  font-size: 50px;
-  color: #333333;
-}
-
-input[type=checkbox] {
-  margin-right: 10px;
-  font-size: 30px;
-}
-
-input[type=checkbox]:focus {
-  outline: 0;
-}
-
-.sad, .happy, .groovy, .sexy, .depressed {
-  grid-area: a;
-  align-self: center;
-  justify-self: center;
-
+.footer {
+  border:solid green;
+ position: sticky;
 }
 
 
