--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,20 @@
 
 html, body {
   margin:0;
-height:100%;
-background-image: linear-gradient(to top, #494949 0%, rgb(0, 0, 0) 100%);
+  min-height: 100vh;
+  flex-direction: column;
+  background-image: linear-gradient(to top, #494949 0%, rgb(0, 0, 0) 100%);
+  font-family: sans-serif;
+  display: flex;
+
 }
 
 
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%; /* 1, 3 */
   /* height: 100vh;
   width: 100vw; */
   background-image: url("./images/karaoke3.jpg");
@@ -17,6 +24,8 @@ background-image: linear-gradient(to top, #494949 0%, rgb(0, 0, 0) 100%);
   /* background-color: black; */
   /* border: solid green; */
 }
+
+
 
 .top-ten {
   color: rgb(160, 192, 252);
@@ -35,7 +44,7 @@ background-image: linear-gradient(to top, #494949 0%, rgb(0, 0, 0) 100%);
 }
 
 .whitney-box {
-  color: rgb(34, 61, 218);
+  color: rgb(189, 189, 189);
   grid-area: a;
   align-self: center;
   justify-self: center;
@@ -47,54 +56,46 @@ background-image: linear-gradient(to top, #494949 0%, rgb(0, 0, 0) 100%);
 }
 
 .clickasong {
-  color: green;
+  color: rgb(207, 207, 207);
   cursor: pointer;
 }
 
 
-.lyric-wrapper, .help-wrapper {
+.lyric-wrapper {
   display: flex;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 10px;
-  grid-auto-rows: 200px;
-  grid-template-areas: 
-    ". a a ."
-    ". a a .";
-  
+  padding: 10px;
+
 }
 
 
-.lyrics .help {
-  color: rgb(34, 61, 218);
-  grid-area: a;
-  align-self: center;
-  justify-self: center;
+.lyrics {
+  flex-direction: row;
+  position: center;
+  margin: auto;
   font-family: sans-serif;
-  font-size: 20px;
-  background-color: rgba(255, 255, 255, 0.486);
+  font-size: 15px;
+  background-color: rgba(102, 102, 102, 0.603);
   width: 60%;
+  color: rgb(255, 255, 255);
 
 }
 
+.help-wrapper {
+  display: flex;
+/* border:solid; */
+}
 
-/* 
-.video-link-container {
-    display: flex;
-    flex-direction: row-reverse;
-      width: 100%; 
+.help {
+  flex-direction: row;
+  position: center;
+  margin: auto;
+  width: 50%;
+  color: rgb(255, 255, 255);
+}
 
-  }
-
-
-.video-link {
-  max-width: 100%;
-  max-height: 300px;
-  align-self: flex-end;
-  bottom: 30px;
-} */
 
 .artist-style {
-  color: rgb(107, 107, 251);
+  color: rgb(136, 136, 136);
 }
 
 
@@ -113,9 +114,6 @@ bottom: -90px;
 }
 
 .grid-list {
-  /* display: grid;
-  grid-row: auto;
-  text-align: center; */
   display: flex;
   flex-direction: column;
 }
@@ -125,9 +123,9 @@ bottom: -90px;
   background-color: rgba(183, 184, 193, 0.8);
   font-size: 20px;
   width: 20vw;
-display:flex;
-justify-content: center;
-margin: auto;
+  display:flex;
+  justify-content: center;
+  margin: auto;
 
 }
 
@@ -154,9 +152,79 @@ margin: auto;
   margin: auto;
 }
 
+
+.chosen-track-title-container {
+  display: flex;
+  padding: 10px;
+  
+}
+.chosen-track-title {
+  flex-direction: row;
+  position: center;
+  margin: auto;
+  background-color: rgba(183, 184, 193, 0.8);
+  font-size: 30px;
+  color: purple;
+  
+  
+}
+
 .footer {
-  border:solid green;
- position: sticky;
+  flex: none; /* 2 */
+}
+
+.Footer {
+  padding: 1.5rem 1.5rem;
+  background: gray(25%);
+  color: gray(60%);
+  font-size: 0.85em;
+  overflow-x: hidden;
+  text-align: center;
+}
+
+.Footer a {
+  padding-bottom: 1px;
+  border: 0;
+  color: gray(90%);
+}
+.Footer a:focus,
+.Footer a:active,
+.Footer a:hover {
+  color: #fff;
+  text-decoration: underline;
+}
+
+.Footer-credits {
+  margin: 0;
+  padding: 0;
+}
+
+.Footer-credit {
+  display: block;
+  margin: 0;
+}
+
+.Footer-creditSeparator {
+  display: none;
+}
+
+/* If loading the social button fails */
+.Footer-social a,
+.Footer-social iframe {
+  display: inline-block;
+  margin: 0 0 1em;
+  vertical-align: top;
+}
+
+@media (--break-md) {
+  .Footer-credit {
+    display: inline-block;
+    margin: 0 0.25em;
+  }
+  .Footer-creditSeparator {
+    display: inline-block;
+    padding: 0 0.25em;
+  }
 }
 
 
